prevent tab titles from wrapping

--- a/rlp/core/static/css/_projects.scss
+++ b/rlp/core/static/css/_projects.scss
@@ -14,6 +14,7 @@
 
 .nav-tabs > li {
     width: 25%;
+    white-space: nowrap;
 }
 .navbar-secondary {
     .search-icon {
